--- a/11.EJSTodoList/views/list.ejs
+++ b/11.EJSTodoList/views/list.ejs
@@ -23,7 +23,9 @@
 
   <form class="item" method="post" action="/">
     <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-    <button type="submit" name="button" value=<%= Listtitle %>>+</button>
+    
+      <!-- identifies which list is being posted on -->
+    <button type="submit" name="list" value= <%= Listtitle %>>+</button> 
   </form>
 </div>
 
