--- a/11.EJSTodoList/views/list.ejs
+++ b/11.EJSTodoList/views/list.ejs
@@ -1,12 +1,4 @@
-<!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>To Do</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+<%- include('header');-%>
 
 <div class="box" id="heading">
   <h1> <%= Listtitle %> </h1>
@@ -14,8 +6,8 @@
 
 <div class="box">
   <!-- while rendering the dayname we have to render items at same time if one is rendered before the other then error comes -->
-  <% for(var i=0; i<passedarr.length; i++) { %>
-  <div class="item">
+  <% for(var i=0; i<passedarr.length; i++) { %>    
+    <div class="item">
     <input type="checkbox">
     <p> <%= passedarr[i] %> </p>
   </div>
@@ -29,6 +21,5 @@
   </form>
 </div>
 
+<%- include('footer');-%>
 
-</body>
-</html>
